[metadata]
name = toystory
# version = 2014.7
summary = Toy Story - Gamify Github
description-file =
    README.rst
author = Rackspace Atlanta
author-email = 
home-page = 
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
packages =
    toystory

[entry_points]
console_scripts =
    toystory-server = toystory.cmd.server:run
    # toystory-callable = 

toystory.transport =
    pecan = toystory.transport.pecan:Driver

toystory.manager =
    default = toystory.manager.default:Driver

toystory.storage =
    memory = toystory.storage.memory:Driver

[nosetests]
where=tests
verbosity=2

with-doctest = true

cover-package = toystory
cover-html = true
cover-erase = true
cover-inclusive = true

; Disabled: Causes a bug in testtools to manifest.
; Trigger: self.assertX(condition), where condition == False.
;
; In "testtools/testresult/real.py" the traceback is set to
; None in _details_to_exc_info(), but the inspect_traceback()
; method in nose/inspector.py requires a traceback-like object.
;
; detailed-errors = 1

